--- a/Resources/Prototypes/_Shitmed/Entities/Structures/printer.yml
+++ b/Resources/Prototypes/_Shitmed/Entities/Structures/printer.yml
@@ -38,6 +38,7 @@
       - PrintedDocumentDisposalReportRecipe
       - PrintedDocumentStatementAppointmentInterimChapterRecipe
       - PrintedDocumentEmploymentStatementRecipe
+      - PrintedDocumentResignationStatementRecipe
 #  - type: EmagLatheRecipes
 #    emagStaticRecipes:
 #        - PrintedDocumentErrorLoadingFormHeaderRecipe
