--- a/Resources/Prototypes/_BRatbite/game_presets.yml
+++ b/Resources/Prototypes/_BRatbite/game_presets.yml
@@ -1,16 +1,14 @@
 # SPDX-FileCopyrightText: 2025 FloraMillhouse <no email, contact on discord.>
-
 - type: gamePreset
   id: SqueakRat
   alias:
     - johnratbite
     - SqueakRat
     - squeakrat
-    - sr
     - florashitcode
-  name: secret-title
+  name: squeakrat-title
   showInVote: true
-  description:
+  description: squeakrat-description
   rules:
     - PermaBrig # Needed
     - BasicRoundstartVariation
