--- a/Resources/Prototypes/_Goobstation/Maps/atlas.yml
+++ b/Resources/Prototypes/_Goobstation/Maps/atlas.yml
@@ -68,16 +68,19 @@
             ServiceWorker: [ 1, 1 ]
             #engineering
             ChiefEngineer: [ 1, 1 ]
+            EngiSentry: [ 1, 1 ] #ratbite
             AtmosphericTechnician: [ 2, 2 ]
             StationEngineer: [ 2, 2 ]
             TechnicalAssistant: [ 1, 3 ]
             #medical
             ChiefMedicalOfficer: [ 1, 1 ]
             Chemist: [ 1, 1 ]
+            MedOrderly: [ 1, 1 ] #ratbite
             MedicalDoctor: [ 2, 2 ]
             MedicalIntern: [ 1, 3 ]
             #science
             ResearchDirector: [ 1, 1 ]
+            ScicurityGuard: [ 1, 1 ] #ratbite
             Scientist: [ 2, 2 ]
             ResearchAssistant: [ 1, 3 ]
             Borg: [ 2, 2 ]
@@ -91,6 +94,7 @@
             Brigmedic: [ 1, 1 ]
             #supply
             Quartermaster: [ 1, 1 ]
+            CargoInsurance: [ 1, 1 ] #ratbite
             SalvageSpecialist: [ 4, 4 ]
             CargoTechnician: [ 2, 2 ]
             #civillian
