--- a/Resources/Prototypes/_Goobstation/Maps/kettle.yml
+++ b/Resources/Prototypes/_Goobstation/Maps/kettle.yml
@@ -73,7 +73,7 @@
             TechnicalAssistant: [ 8, 8 ]
             #medical
             ChiefMedicalOfficer: [ 1, 1 ]
-            MedicalOrderly: [ 1, 1 ] #ratbite
+            MedOrderly: [ 1, 1 ] #ratbite
             Chemist: [ 2, 3 ]
             Paramedic: [ 2, 2 ]
             MedicalDoctor: [ 3, 5 ]
