--- a/Resources/Prototypes/_Goobstation/Maps/marathon.yml
+++ b/Resources/Prototypes/_Goobstation/Maps/marathon.yml
@@ -72,7 +72,7 @@
             TechnicalAssistant: [ 3, 3 ]
             #medical
             ChiefMedicalOfficer: [ 1, 1 ]
-            MedicalOrderly: [ 1, 1 ] #ratbite
+            MedOrderly: [ 1, 1 ] #ratbite
             Chemist: [ 2, 2 ]
             MedicalDoctor: [ 4, 4 ]
             MedicalIntern: [ 3, 3 ]
