--- a/Resources/Prototypes/Entities/Structures/Power/chargers.yml
+++ b/Resources/Prototypes/Entities/Structures/Power/chargers.yml
@@ -241,6 +241,8 @@
           - ProjectileBatteryAmmoProvider
           - Stunbaton
           - PowerCell
+          tags: # RatBitesStation - also this exist on goob code too
+          - FitsInCharger
         blacklist:
           tags:
           - PotatoBattery
