final commit before review. fix all stupid bug and make ammo printable.

--- a/Resources/Prototypes/Research/arsenal.yml
+++ b/Resources/Prototypes/Research/arsenal.yml
@@ -115,6 +115,8 @@
   # - MagazineBoxLightRifleIncendiary # Goobstation - remove light rifle
   - MagazineBoxRifleIncendiary
   - EnergyMagPistolOverchargeLethal # Ratbite station - more sidearm slop
+  - SpeedLoader38MagnumIncendiary # Ratbite station - more sidearm slop
+  - MagazineBox38MagnumIncendiary # Ratbite station - more sidearm slop
   # Goobstation R&D Console rework start
   position: 2,2
   technologyPrerequisites:
@@ -186,6 +188,8 @@
   - MagazineBoxRifleUranium
   - BoxShotgunUranium
   - MagazineBoxShotgunUraniumHighCaliber # Goobstation
+  - SpeedLoader38MagnumUranium # Ratbite station - more sidearm slop
+  - MagazineBox38MagnumUranium # Ratbite station - more sidearm slop
   # Goobstation R&D Console rework start
   position: 3,2
   technologyPrerequisites:
