--- a/Resources/Prototypes/_BRatbite/Entities/Objects/Weapon/ammunition/energy-mag.yml
+++ b/Resources/Prototypes/_BRatbite/Entities/Objects/Weapon/ammunition/energy-mag.yml
@@ -8,7 +8,7 @@
     layers:
     - state: base
       map: ["enum.GunVisualLayers.Base"]
-    - state: mag-3
+    - state: o2
       map: ["enum.GunVisualLayers.Mag"]
   - type: Battery
     maxCharge: 1200
@@ -17,7 +17,7 @@
   - type: MagazineVisuals
     magState: mag
     steps: 3
-    zeroVisible: false
+    zeroVisible: true
   - type: Appearance
   - type: Tag
     tags:
@@ -34,7 +34,7 @@
     layers:
     - state: lethal
       map: [ "enum.GunVisualLayers.Base" ]
-    - state: mag-3
+    - state: o2
       map: ["enum.GunVisualLayers.Mag"]
   - type: ProjectileBatteryAmmoProvider
     proto: PistolBulletEnergyGunLethal
@@ -50,6 +50,8 @@
     layers:
     - state: disabler
       map: [ "enum.GunVisualLayers.Base" ]
+    - state: o2
+      map: ["enum.GunVisualLayers.Mag"]
   - type: ProjectileBatteryAmmoProvider
     proto: PistolBulletEnergyGunDisabler
     fireCost: 100
@@ -64,7 +66,7 @@
     layers:
     - state: ion
       map: [ "enum.GunVisualLayers.Base" ]
-    - state: mag-3
+    - state: o2
       map: ["enum.GunVisualLayers.Mag"]
   - type: ProjectileBatteryAmmoProvider
     proto: PistolBulletEnergyGunIon
@@ -80,7 +82,7 @@
     layers:
     - state: overcharge
       map: [ "enum.GunVisualLayers.Base" ]
-    - state: mag-3
+    - state: o2
       map: ["enum.GunVisualLayers.Mag"]
   - type: ProjectileBatteryAmmoProvider
     proto: PistolBulletEnergyGunOvercharge
