--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/curadrobe.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/curadrobe.yml
@@ -15,3 +15,5 @@
     ClothingShoesBootsLaceup: 2
     ClothingHeadsetService: 2
     PrinterDocFlatpack: 2
+  contrabandInventory:
+    ToyFigurineLibrarian: 1
